k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-api-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate # Enables smooth, zero-downtime updates
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nagp-api
  template:
    metadata:
      labels:
        app: nagp-api
    spec:
      containers:
        - name: api-container
          image: premdas92/nagp-api:v1 # Your custom Docker Hub image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # FinOps Requirement: Define CPU and memory requests and limits
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          # Self-Healing Requirements: Probes monitor app health continuously
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nagp-api-service
spec:
  type: ClusterIP # Ingress will route traffic to this service
  selector:
    app: nagp-api
  ports:
    - port: 3000
      targetPort: 3000
