k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagp-api-ingress
  annotations:
    # This tells AWS to create a public-facing, internet-connected ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb # CRITICAL FIX: Tells AWS EKS to pick this up and generate your URL
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nagp-api-service
                port:
                  number: 3000
